# jezarch

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  package.json
backend/: Bunfile.js  README.md  index.ts  package.json  tsconfig.json
backend-tests/: auth.test.ts  notes.test.ts  users.test.ts
backend/src/: main.ts
doc/: ADMIN_GUIDE.md  INSTALLATION.md  TECHNICAL_DETAILS.md  USAGE_GUIDE.md
frontend/: README.md  build.ts  package.json  tsconfig.json
frontend-react/: build.ts  package.json  tailwind.config.ts
frontend-rust/: Cargo.toml
frontend-rust/src/: api.rs  app.rs  auth.rs  lib.rs  main.rs  models.rs  state.rs  style.rs  utils.rs  views.rs
frontend-rust/src/components/: data_table.rs  element_browser_popover_content.rs  element_selector.rs  error_display.rs  form_utils.rs  header.rs  loading_spinner.rs  mod.rs  pagination.rs  password_input.rs  search_bar.rs  sidebar.rs  signature_selector.rs  tag_selector.rs
frontend-rust/src/components/archive/: document_form.rs  document_list.rs  document_preview_dialog.rs  mod.rs  unit_selector.rs
frontend-rust/src/components/signatures/: element_form.rs  mod.rs
frontend-rust/src/views/: admin.rs  archive.rs  dashboard.rs  login.rs  notes.rs  register.rs  signatures_components.rs  signatures_elements.rs  tags.rs
frontend-rust/src/views/admin/: log_viewer.rs  mod.rs  settings_form.rs  ssl_config.rs  user_management.rs
frontend-solid/: build.ts  bun-fig.toml  package.json  tsconfig.json
frontend-vanilla/: build.ts  package.json  tsconfig.json
frontend-vanjs/: build.ts  package.json  tsconfig.json
(+468 files in other folders)
