[package]
name = "jezarch-fe-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", features = ["persistence"] } # Use eframe for cross-platform setup
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
strum = { version = "0.26", features = ["derive"] } # For deriving enum variants
strum_macros = "0.26"
thiserror = "1.0" # For custom error types
url = "2.5" # For URL parsing/building
egui_extras = { version = "0.28", features = ["chrono"] } # For Table, potentially Date Picker
confy = "0.6" # Simple config/state persistence (alternative to localStorage)

# Optional: for better async handling within egui
# poll-promise = "0.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"